--- a/REST Practise/appsettings.json
+++ b/REST Practise/appsettings.json
@@ -8,7 +8,12 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "EmpConnectionString": "Server=(localdb)\\MSSQLLocalDB; Database=Emp_SQL; Trusted_Connection=True; TrustServerCertificate=True",
-    "EmpAuthConnectionString": "Server=(localdb)\\MSSQLLocalDB; Database=EMP_SQL_Auth; Trusted_Connection=True; TrustServerCertificate=True"
+    "EmpConnectionString": "Server=(localdb)\\MSSQLLocalDB; Database=Emp_SQL1; Trusted_Connection=True; TrustServerCertificate=True"
+  },
+
+  "Jwt": {
+    "Key": "asdsadsaddzvxgvfcbgnjghvjhgjhgjhgjgjhg",
+    "Issure": "https://localhost:7266/",
+    "Audience": "https://localhost:7266/"
   }
 }
